5.service-and-neworking-20p/problem-01/netpol2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol2
  namespace: ch5p01-secured
spec:
  podSelector:
    matchLabels:
      tag: subtask2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tag: outsideNS
          namespaceSelector: {}
