5.service-and-neworking-20p/problem-01/netpol3.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol1
  namespace: ch5p01-secured
spec:
  podSelector:
    matchLabels:
      tag: subtask3
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ch5p01-trusted
