5.service-and-neworking-20p/problem-01/netpol4.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol4
  namespace: ch5p01-secured
spec:
  podSelector:
    matchLabels:
      tag: subtask4
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tag: allowed
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ch5p01-internal
