5.service-and-neworking-20p/problem-01/netpol5.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol5
  namespace: ch5p01-secured
spec:
  podSelector:
    matchLabels:
      tag: subtask5
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tag: insidetrust
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ch5p01-exttrust
